# kgb-sound-system-1984

./: .gitignore  .gitmodules  AGENTS.md  AUDIT.md  CLAUDE.md  README.md  REFACTOR_PLAN.md  SPRINTS.md  TASKS.md  TASKS_UI.md  TASKS_v1_original.md  TEST_PLAN.md  package-lock.json  package.json  render.yaml  vitest.config.mjs
client/: .env.development  .env.production  README.md  afterPack.mjs  package-lock.json  package.json  tsconfig.worker.json  vite.config.ts
client/electron/: main.js
client/electron/nativeAudio/: ipc.js  preload.js  utilityHost.mjs
client/electron/nativeAudio/portaudioAddon/: CMakeLists.txt  NOTICE  README.md  index.js  package-lock.json  package.json
client/electron/nativeAudio/portaudioAddon/scripts/: fetch-asio-sdk.ps1  fetch-vst3-sdk.ps1  gen-electron-implib.mjs
client/electron/nativeAudio/portaudioAddon/src/: addon.cc
client/electron/nativeAudio/portaudioAddon/src/vst/: vstHost.cc  vstHost.h  vstIids.cc  vstProbeTest.cc
client/public/: portaudioWorklet.js
client/src/: App.css  App.tsx  electron.d.ts  index.css  main.tsx
client/src/audio/: audioEngine.ts  clockSync.ts  deviceUtils.ts  insertChainStore.ts  metronome.ts  nativeAudioController.ts  recorder.ts  toneNativeContext.ts
client/src/canvas/: CableEdge.tsx  CanvasView.tsx  PanelNode.tsx  panelContent.ts
client/src/components/: ChatPanel.tsx  DeviceSetupModal.tsx  DrumMachinePanel.tsx  FxChainButton.tsx  Knob.tsx  LocalMixerStrip.tsx  MixerChannel.tsx  MixerStrip.tsx  RemoteChannelStrip.tsx  SettingsModal.tsx  TimelinePanel.tsx  VideoTile.tsx
client/src/debug/: Hud.tsx  README.md  bootstrap.ts  bus.ts  install.ts  types.ts
client/src/debug/collectors/: core.ts  datapath.ts  jank.ts  mem.ts  procs.ts  rtc.ts  webaudio.ts
client/src/drumMachine/: DrumMachineContainer.tsx  drumMachine.ts  drumMachineNode.tsx  drumNodes.ts  drumSingleton.ts
client/src/graph/: controlBus.ts  defineNode.ts  graphStore.ts  graphSync.ts  index.ts  nodeRegistry.ts  types.ts
client/src/graph/nodes/: builtins.ts  index.ts
client/src/mixer/: mixerEngine.ts
client/src/networking/: roomSyncClient.ts
client/src/panels/: FloatingPanel.tsx  PanelsView.tsx  panelStore.ts  panels.css
client/src/pianoRoll/: PianoRollPanel.tsx  pianoRollNode.tsx  pianoRollStore.ts  pianoTransport.ts
client/src/protocol/: syncProtocol.ts
client/src/rtc/: mediaDevices.ts  nativeRtcManager.ts  peerManager.ts
client/src/timeline/: audioClipPlayer.ts  exportClip.ts  midiPlayer.ts  mixdown.ts  projectExport.ts  timelineNode.tsx  timelineNodes.ts  timelineSingleton.ts  timelineStore.ts  timelineSync.ts
client/src/types/: lamejs.d.ts
client/src/utils/: participantColor.ts
client/src/workers/: mp3Encoder.worker.ts  recorderWorker.worker.ts
docs/: ADR_native_audio.md  N1_clip_step_authz.md  kgb_sound_system_85_application_architecture_v_2.md  kgb_sound_system_85_codex_roadmap_v_2_video_integrated.md
server/: index.js
server/protocol/: schemas.js
server/rooms/: roomManager.js
server/socket/: registerSocketHandlers.js
test/server/: handlers.test.js  roomManager.test.js  schemas.test.js
